--- a/网页截屏/index.html
+++ b/网页截屏/index.html
@@ -12,25 +12,29 @@
     <script type="text/javascript" src="//static.acgist.com/demo/html2canvas/html2canvas.js"></script>
 </head>
 <body>
-<div>kjaklsdjaklsdjfajskldjfklaj</div>
 <img id="showImg"/>
 <div onclick="save()" id="content">
+    <p style="height: 100px; width: 100px; background-color: red"></p>
+    <p style="height: 100px; width: 100px; background-color: red"></p>
+    <p style="height: 100px; width: 100px; background-color: red"></p>
     <p style="height: 100px; width: 100px; background-color: red"></p>
 </div>
 <script type="text/javascript">
     var $download = $('<a id="download"></a>');
-//    $download.hide().appendTo("content");
     function save() {
         html2canvas(document.getElementById('content'), {
             onrendered: function (canvas) {
                 var image = canvas.toDataURL("image/png").replace("image/png", "image/octet-stream;");
-                console.log(image)
+                //输出图片base64
+                console.log(image);
+                //将图片显示到页面
                 document.getElementById('showImg').src = image;
-//                $download.attr("href", image);
-//                $download.attr("download", "image.png");
-//                var event = document.createEvent("MouseEvents");
-//                event.initMouseEvent("click", true, false, window, 0, 0, 0, 0, 0, false, false, false, false, 0, null);
-//                $download[0].dispatchEvent(event);
+                //下载图片到电脑
+                $download.attr("href", image);
+                $download.attr("download", "image.png");
+                var event = document.createEvent("MouseEvents");
+                event.initMouseEvent("click", true, false, window, 0, 0, 0, 0, 0, false, false, false, false, 0, null);
+                $download[0].dispatchEvent(event);
             }
         });
     }
